# dht_crawler

./: .cursorrules  .gitignore  BEP51_IMPLEMENTATION.md  CMakeLists.txt  CMakePresets.json  Dockerfile.ci  Dockerfile.linux-x86  Dockerfile.windows-x86  ENHANCED_METADATA_EXTRACTION.md  ERROR_LOGGING_SYSTEM.md  METADATA_FETCHING_SOLUTIONS.md  PORT_FORWARDING_GUIDE.md  README.md  RELEASE_BUILD_SYSTEM.md  SMART_CRAWLING_STRATEGY.md  apply_metadata_fix.sh  diagnose_metadata.py  docker-compose.linux-x86.yml  docker-compose.test.yml  fixed_session_config.cpp  fixed_session_config.txt  magnetico_upgrade.md  manual_test_steps.sh  metadata_fix.cpp  python_integration.md  quick_dht_fix.cpp  quick_test.py  session_config_replacement.cpp  tracker_metadata_fix.cpp  ubuntu_test.txt  verify_fix.sh
.github/: README.md
.github/workflows/: ci.yml
cmake/: DHTCrawlerConfig.cmake.in
database/migrations/: README.md  run_migrations.sh
scripts/: build_linux_x86.sh  build_release.sh  build_windows_x86.sh  ci_setup.sh  run_tests.sh
src/: bep51_dht_indexer.hpp  bep9_issue_resolver.cpp  bep9_issue_resolver.hpp  bittorrent_protocol.cpp  bittorrent_protocol.hpp  concurrent_dht_manager.hpp  database_manager.cpp  database_manager.hpp  dht_crawler.cpp  dht_token_manager.cpp  dht_token_manager.hpp  direct_peer_connector.cpp  direct_peer_connector.hpp  enhanced_bootstrap.cpp  enhanced_bootstrap.hpp  enhanced_metadata_manager.hpp  error_handler.cpp  error_handler.hpp  extension_protocol_diagnostics.cpp  extension_protocol_diagnostics.hpp  hybrid_connection_manager.cpp  hybrid_connection_manager.hpp  metadata_piece_manager.cpp  metadata_piece_manager.hpp  metadata_validator.cpp  metadata_validator.hpp  metadata_worker_pool.hpp  node_quality_tracker.cpp  node_quality_tracker.hpp  performance_config.cpp  performance_config.hpp  performance_monitor.cpp  performance_monitor.hpp  performance_optimizer.cpp  performance_optimizer.hpp  request_cache_manager.cpp  request_cache_manager.hpp  routing_table_manager.cpp  routing_table_manager.hpp  smart_dht_crawler.hpp  (+5 more)
tests/: CMakeLists.txt  run_tests.sh
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt
